# rules_docker

./: BUILD  README.md  WORKSPACE  index.for_docs.bzl  providers.bzl  rules_nodejs_write_BUILD.diff  test-docs.sh
.github/workflows/: main.yml  release.yml
cc/: BUILD  image.bzl  repositories.bzl
container/: build_tar.py  bundle.bzl  flatten.bzl  image.bzl  import.bzl  layer.bzl  layer_tools.bzl  push.bzl
container/go/cmd/builder/: BUILD  builder.go
container/rpmfile/: headers.py
d/: image.bzl
docs/: BUILD.bazel  Built-ins.md  CC.md  README.md  _config.yml  examples.md  index.md  install.md  repositories.md
docs/_includes/: drawer.html  header.html
docs/_layouts/: home.html
docs/_site/: BUILD.bazel  Built-ins.html  CC.html  Java.html  Node.js.html  Python.html  Python3.html  examples.html  index.html  install.html  repositories.html
go/: BUILD  image.bzl  repositories.bzl
groovy/: image.bzl
java/: BUILD  image.bzl  repositories.bzl
kotlin/: image.bzl
lang/: image.bzl
nodejs/: BUILD  image.bzl  repositories.bzl
python/: BUILD  image.bzl  repositories.bzl
python3/: BUILD  image.bzl  repositories.bzl
repositories/: BUILD  go_repositories.bzl  repositories.bzl
scala/: image.bzl
testdata/: package.json
tools/stardoc/: index.bzl
